preventing images from creating whitespace

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
     background-size: 110%;
     background-repeat: no-repeat;
     background-position:center;
-    min-height: 80rem;
+    
     
 }
 
